--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title>React work</title>
+  <title>Cobra Stylez</title>
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" media="screen" charset="utf-8"> -->
   <link rel="stylesheet" href="./styles/skeleton/css/normalize.css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="./styles/skeleton/css/skeleton.css" media="screen" charset="utf-8">
