--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <head>
-  <title>Cobra Stylez</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" media="screen" charset="utf-8">
+  <link rel="stylesheet" href="./styles/main.css" media="screen" charset="utf-8">
+  <title>Cobra Style Thesaurus</title>
 </head>
 <body>
   <div id="app"></div>
