--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <div id="app"></div>
+  <img src="http://newsimg.bbc.co.uk/media/images/45707000/gif/_45707216_word_usage_466.gif">
 
   <script src="bundle.js"></script>
 </body>
